# openbsw-rust

./: .clang-format  .clang-tidy  .gitignore  .treefmt.toml  CMakeLists.txt  CMakePresets.json  Cargo.toml  Filelists.cmake  NOTICE.md  README.md
.ci/: build_matrix.py  buildoperations.py  code_coverage.py  resolve-clang-tidy-translation-units.py  s32k148_pytest.py
.ci/test/: test_resolve_clang_tidy_translation_units.py
.github/workflows/: build.yml  clang-tidy.yml  format.yml  puncover_tool.yml  rust.yml
admin/cmake/: ArmNoneEabi.cmake
cmake/toolchains/: ArmNoneEabi.cmake
executables/referenceApp/: CMakeLists.txt
executables/referenceApp/application/: CMakeLists.txt
executables/referenceApp/asyncCoreConfiguration/rust/: Cargo.toml  build.rs
executables/referenceApp/rustHelloWorld/: CMakeLists.txt  Cargo.toml  cbindgen.toml
executables/referenceApp/rustHelloWorld/include/: rustHelloWorld.h  rust_hello_world.h
executables/referenceApp/rustHelloWorld/src/: lib.rs
libs/bsw/async/: CMakeLists.txt
libs/bsw/async/rust/: Cargo.toml
libs/bsw/async/rust/src/: lib.rs
libs/bsw/cpp2can/rust/: Cargo.toml  build.rs  wrapper.h
libs/bsw/doip/: CMakeLists.txt
libs/bsw/doip/include/doip/common/: DoIpCyclicTaskGenerator.h  DoIpHeader.h  DoIpSendJobHelper.h  DoIpSimplePayloadSendJob.h  DoIpStaticPayloadSendJob.h  DoIpTcpConnection.h  DoIpTransportMessageProvidingListenerHelper.h  DoIpTransportMessageRef.h  DoIpTransportMessageSendJob.h  DoIpUdpConnection.h  IDoIpConnection.h  IDoIpConnectionHandler.h  IDoIpSendJob.h  IDoIpSendJobCallback.h  IDoIpTcpConnection.h  IDoIpTransportMessageProvidingListener.h
libs/bsw/doip/include/doip/server/: DoIpServerConnectionHandler.h  DoIpServerSocketHandler.h  DoIpServerTransportConnection.h  DoIpServerTransportConnectionPool.h  DoIpServerTransportConnectionProvider.h  DoIpServerTransportLayer.h  DoIpServerTransportMessageHandler.h  DoIpServerVehicleIdentification.h  DoIpServerVehicleIdentificationConfig.h  DoIpServerVehicleIdentificationRequest.h  DoIpServerVehicleIdentificationService.h  DoIpServerVehicleIdentificationSocketHandler.h  IDoIpServerConnection.h  IDoIpServerConnectionFilter.h  IDoIpServerMessageHandler.h  IDoIpServerTransportConnectionCreator.h  IDoIpServerVehicleIdentificationCallback.h  IDoIpUdpOemMessageHandler.h
libs/bsw/doip/mock/gmock/include/doip/common/: DoIpConnectionMock.h  DoIpSendJobMock.h  DoIpTcpConnectionMock.h  DoIpTransportMessageProvidingListenerMock.h
libs/bsw/doip/mock/gmock/include/doip/server/: DoIpServerConnectionFilterMock.h  DoIpServerConnectionHandlerCallbackMock.h  DoIpServerConnectionMock.h  DoIpServerTransportLayerCallbackMock.h  DoIpUdpOemMessageHandlerMock.h
libs/bsw/doip/src/doip/common/: DoIpSendJobHelper.cpp  DoIpSimplePayloadSendJob.cpp  DoIpStaticPayloadSendJob.cpp  DoIpTcpConnection.cpp  DoIpTransportMessageProvidingListenerHelper.cpp  DoIpTransportMessageSendJob.cpp  DoIpUdpConnection.cpp  DoIpVehicleIdentificationRequestSendJob.cpp
libs/bsw/doip/src/doip/server/: DoIpServerConnectionHandler.cpp  DoIpServerTransportConnection.cpp  DoIpServerTransportConnectionProvider.cpp  DoIpServerTransportLayer.cpp  DoIpServerTransportMessageHandler.cpp  DoIpServerVehicleIdentification.cpp  DoIpServerVehicleIdentificationSocketHandler.cpp
libs/bsw/doip/test/: CMakeLists.txt
libs/bsw/doip/test/include/doip/common/: DoIpTestHelpers.h
libs/bsw/doip/test/src/doip/common/: DoIpHeaderTest.cpp  DoIpSendJobHelperTest.cpp  DoIpSimplePayloadSendJobTest.cpp  DoIpStaticPayloadSendJobTest.cpp  DoIpTcpConnectionTest.cpp  DoIpTestHelpers.cpp  DoIpTransportMessageSendJobTest.cpp  DoIpUdpConnectionTest.cpp  DoIpVehicleIdentificationRequestSendJobTest.cpp
libs/bsw/doip/test/src/doip/server/: DoIpServerConnectionHandlerTest.cpp  DoIpServerTransportConnectionPoolTest.cpp  DoIpServerTransportConnectionProviderTest.cpp  DoIpServerTransportConnectionTest.cpp  DoIpServerTransportLayerTest.cpp  DoIpServerTransportMessageHandlerTest.cpp  DoIpServerVehicleIdentificationConfigTest.cpp  DoIpServerVehicleIdentificationRequestTest.cpp  DoIpServerVehicleIdentificationSocketHandlerTest.cpp  DoIpServerVehicleIdentificationTest.cpp
libs/bsw/io/examples/: VariantQueueExample.cpp
libs/bsw/logger/: CMakeLists.txt
libs/bsw/logger/rust/: Cargo.toml  cbindgen.toml
libs/bsw/logger/rust/include/: BswLogger.h
libs/bsw/logger/rust/src/: bsw_logger.rs  ffi.rs  lib.rs  log_buf.rs
libs/bsw/logger/test/src/logger/: BufferedLoggerOutputTest.cpp  ConsoleEntryOutputTest.cpp  EntrySerializerTest.cpp  SharedStreamEntryOutputTest.cpp
libs/bsw/middleware/: CMakeLists.txt
libs/bsw/middleware/test/: CMakeLists.txt
libs/bsw/middleware/test/src/core/: AllocatorBaseTest.cpp  ClusterConfigurationTest.cpp  ConnectionTest.cpp  DbManipulatorTest.cpp  FutureDispatcherTest.cpp  InstancesDatabase.h  LoggerApi.cpp  MessagePayloadBuilderTest.cpp  MessageTest.cpp  Proxy.h  ProxyAttributesTest.cpp  ProxyAttributesUnderTest.h  ProxyBaseTest.cpp  ReferenceApp.h  ResponseBufferTest.cpp  Skeleton.h  SkeletonAttributeTest.cpp  SkeletonBaseTest.cpp
libs/bsw/middleware/test/src/core/mock/: ClusterConnectionMock.h  ProxyMock.h
libs/bsw/middleware/test/src/logger/: DslLogger.h
libs/bsw/middleware/test/src/logger/mock/: LoggerMock.cpp  LoggerMock.h
libs/bsw/middleware/test/src/memory/: AggregatorTest.cpp  PoolsTest.cpp
libs/bsw/middleware/test/src/memory/mock/: AllocatorMock.cpp  AllocatorMock.h
libs/bsw/middleware/test/src/os/: OsDefinitions.cpp
libs/bsw/middleware/test/src/queue/: QueueTest.cpp
libs/bsw/middleware/test/src/time/mock/: SystemTimerProviderMock.cpp  SystemTimerProviderMock.h
libs/bsw/timer/rust/: Cargo.toml
libs/bsw/timer/rust/src/: lib.rs
libs/bsw/transport/src/: AbstractTransportLayer.cpp  TransportMessage.cpp
libs/rust/console_out/: Cargo.toml
libs/rust/console_out/src/: lib.rs
libs/rust/panic_handler/: Cargo.toml
libs/rust/panic_handler/src/: lib.rs
test/pyTest/: target_s32k148.toml
tools/can/: bring-up-vcan0.sh  send_demo_msg.sh
tools/vscode/dot_vscode/: c_cpp_properties.json
(+99 files in other folders)
