[workspace]
resolver = "3"

members = [
  "executables/referenceApp/rustHelloWorld",
]

[workspace.package]
version = "0.1.0"
documentation = "https://eclipse-openbsw.github.io/openbsw/"

[workspace.dependencies]
reference-app-async-core-configuration.path = "executables/referenceApp/asyncCoreConfiguration/rust"

openbsw-can.path = "libs/bsw/cpp2can/rust"
openbsw-console-out.path = "libs/rust/console_out"
openbsw-logger.path = "libs/bsw/logger/rust"
openbsw-panic-handler.path = "libs/rust/panic_handler"
openbsw-runtime.path = "libs/bsw/async/rust"
openbsw-timer.path = "libs/bsw/timer/rust"

embassy-executor = "0.7.0"
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"

log = "0.4"
critical-section = "1.2.0"
bindgen = "0.71.0"

# Similar to C++ we always build optimized
[profile.dev]
panic ="abort"
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.release]
panic ="abort"
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
